--- a/src/app/views/section-contact/section-contact.component.html
+++ b/src/app/views/section-contact/section-contact.component.html
@@ -26,7 +26,7 @@
               >
                 <div
                   *ngIf="f.name.errors.required"
-                  [innerText]="resource.error.name_mandatory"
+                  [innerText]="resource.error.surname_mandatory"
                 ></div>
               </div>
             </div>
