--- a/src/app/views/admin/perlertype/perlertype-form/perlertype-form.component.html
+++ b/src/app/views/admin/perlertype/perlertype-form/perlertype-form.component.html
@@ -9,14 +9,21 @@
 <section class="md:py-14 py-6 flex w-10/12 mx-auto justify-center">
   <div class="formStyle w-full space-y-8">
     <div class="flex justify-center">
-      <h2 *ngIf="isAddMode" class="styleTitle">Enregistrer un nouveau type de perle</h2>
-      <h2 *ngIf="!isAddMode" class="styleTitle">Modifier un type de perle</h2>
+      <h2
+        *ngIf="isAddMode"
+        class="styleTitle"
+        [innerText]="
+          isAddMode
+            ? resource.generic.create_m.format(resource.perler_type.title.toLowerCase())
+            : resource.generic.edit_m.format(resource.perler_type.title.toLowerCase())
+        "
+      ></h2>
     </div>
     <form [formGroup]="perlerTypeForm" (ngSubmit)="onSubmitForm()" class="space-y-8 flex flex-col">
       <div class="flex md:grid md:grid-cols-3 md:gap-4 md:space-y-0 flex-col space-y-7">
         <div class="form-group">
           <p-floatlabel variant="on">
-            <label for="reference">Reference</label>
+            <label for="reference" [innerText]="resource.form.reference"></label>
             <input
               type="text"
               id="reference"
@@ -30,13 +37,19 @@
             *ngIf="f.reference.errors && (f.reference.touched || f.reference.dirty)"
             class="text-red-600 text-sm mt-1"
           >
-            <div *ngIf="f.reference.errors.required">La référence est obligatoire</div>
-            <div *ngIf="f.reference.errors.perlerTypeRefExists">La référence doit être unique</div>
+            <div
+              *ngIf="f.reference.errors.required"
+              [innerText]="resource.error.reference_mandatory"
+            ></div>
+            <div
+              *ngIf="f.reference.errors.perlerTypeRefExists"
+              [innerText]="resource.error.reference_unique"
+            ></div>
           </div>
         </div>
         <div class="form-group">
           <p-floatlabel variant="on">
-            <label for="libelle">Libelle</label>
+            <label for="libelle" [innerText]="resource.form.libelle"></label>
             <input
               type="text"
               id="libelle"
@@ -50,24 +63,32 @@
             *ngIf="f.libelle.errors && (f.libelle.touched || f.libelle.dirty)"
             class="text-red-600 text-sm mt-1"
           >
-            <div *ngIf="f.libelle.errors.required">Le libelle est obligatoire</div>
+            <div
+              *ngIf="f.libelle.errors.required"
+              [innerText]="resource.error.libelle_mandatory"
+            ></div>
           </div>
         </div>
 
         <div class="form-group md:flex md:w-full md:justify-center md:items-center space-x-4">
-          <label class="dark:text-white" for="color">Couleur</label>
+          <label class="dark:text-white" for="color" [innerText]="resource.form.color"></label>
           <p-color-picker formControlName="color"></p-color-picker>
           <div
             *ngIf="f.color.errors && (f.color.touched || f.color.dirty)"
             class="text-red-600 text-sm mt-1"
           >
-            <div *ngIf="f.color.errors.required">La couleur est obligatoire</div>
+            <div *ngIf="f.color.errors.required" [innerText]="resource.error.color_mandatory"></div>
           </div>
         </div>
       </div>
 
       <div class="flex w-full justify-center">
-        <p-button type="submit" [disabled]="perlerTypeForm.invalid"> Enregistrer </p-button>
+        <button
+          pButton
+          type="submit"
+          [disabled]="perlerTypeForm.invalid"
+          [innerText]="resource.button.save"
+        ></button>
       </div>
     </form>
   </div>
