--- a/src/app/views/admin/user/user-list/user-list.component.html
+++ b/src/app/views/admin/user/user-list/user-list.component.html
@@ -9,13 +9,13 @@
     <p-table [value]="(usersWithButtons$ | async) ?? []" [tableStyle]="{ 'min-width': '50rem' }">
       <ng-template #header>
         <tr>
-          <th class="w-1/6">Action</th>
-          <th class="w-2/6">Email</th>
-          <th class="w-1/6">Pseudo</th>
-          <th class="w-1/6">Nom</th>
-          <th class="w-1/6">Prénom</th>
-          <th class="w-1/12">Admin</th>
-          <th class="w-1/12">Compte</th>
+          <th class="w-1/6" [innerText]="resource.table.actions"></th>
+          <th class="w-2/6" [innerText]="resource.table.email"></th>
+          <th class="w-1/6" [innerText]="resource.table.display_name"></th>
+          <th class="w-1/6" [innerText]="resource.table.surname"></th>
+          <th class="w-1/6" [innerText]="resource.table.name"></th>
+          <th class="w-1/12" [innerText]="resource.table.admin"></th>
+          <th class="w-1/12" [innerText]="resource.table.account"></th>
         </tr>
       </ng-template>
       <ng-template #body let-item>
@@ -50,72 +50,3 @@
     </p-table>
   </div>
 </section>
-<!-- <ng-template #content let-c="close" let-d="dismiss">
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Utilisateur</h4>
-    <button type="button" class="close" aria-label="Close" (click)="d()">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <div class="flex" style="margin-bottom: 10px">
-      <div class="col-3">Email:</div>
-      <div class="col-9">
-        {{ user.email }}
-      </div>
-    </div>
-    <div class="flex" style="margin-bottom: 10px">
-      <div class="col-3">Pseudo:</div>
-      <div class="col-9">
-        {{ user.displayName }}
-      </div>
-    </div>
-    <div class="flex" style="margin-bottom: 10px">
-      <div class="col-3">Nom:</div>
-      <div class="col-9">
-        {{ user.surname }}
-      </div>
-    </div>
-    <div class="flex" style="margin-bottom: 10px">
-      <div class="col-3">Prénom:</div>
-      <div class="col-9">
-        {{ user.name }}
-      </div>
-    </div>
-    <div class="flex" style="margin-bottom: 10px">
-      <div class="col-3">Adresse:</div>
-      <div class="col-9">
-        {{ user.adress }}
-      </div>
-    </div>
-    <div class="flex" style="margin-bottom: 10px">
-      <div class="col-3">Code Postal:</div>
-      <div class="col-9">
-        {{ user.zipcode }}
-      </div>
-    </div>
-    <div class="flex" style="margin-bottom: 10px">
-      <div class="col-3">Ville:</div>
-      <div class="col-9">
-        {{ user.city }}
-      </div>
-    </div>
-    <div class="flex" style="margin-bottom: 10px">
-      <div class="col-3">Admin:</div>
-      <div class="col-9">
-        <p *ngIf="user.admin"><i class="fas fa-check-square text-success"></i></p>
-        <p *ngIf="!user.admin"><i class="far fa-square text-danger"></i></p>
-      </div>
-    </div>
-    <div class="flex" style="margin-bottom: 10px">
-      <div class="col-3">Actif:</div>
-      <div class="col-9">
-        <p *ngIf="!user.disabled"><i class="fas fa-check-square text-success"></i></p>
-        <p *ngIf="user.disabled"><i class="far fa-square text-danger"></i></p>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="c()">Fermer</button>
-  </div>
-</ng-template> -->
