--- a/src/app/views/admin/tag/tag-form/tag-form.component.html
+++ b/src/app/views/admin/tag/tag-form/tag-form.component.html
@@ -116,7 +116,7 @@
         <button
           pButton
           type="submit"
-          [disabled]="tagForm.invalid"
+          [disabled]="tagForm.invalid || tagForm.pending"
           [innerText]="resource.button.save"
         ></button>
       </div>
