--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -56,7 +56,7 @@ h6 {
 # Sections
 --------------------------------------------------------------*/
 section {
-  overflow: hidden;
+  //overflow: hidden;
   padding-bottom: 40px;
 }
 
