--- a/src/app/views/auth/signup/signup.component.html
+++ b/src/app/views/auth/signup/signup.component.html
@@ -70,7 +70,7 @@
                 <ul class="pl-2 my-0 leading-normal">
                   <li [innerText]="resource.signup.at_least_one_lowercase"></li>
                   <li [innerText]="resource.signup.at_least_one_uppercase"></li>
-                  <li [innerText]="resource.signup.at_least_one_uppercase"></li>
+                  <li [innerText]="resource.signup.at_least_one_numeric"></li>
                   <li [innerText]="resource.signup.minimum_characters"></li>
                 </ul>
               </ng-template>
