--- a/src/app/views/change-password/change-password.component.html
+++ b/src/app/views/change-password/change-password.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col space-y-7 justify-center formStyle">
-  <h2 class="styleTitle">Changement de mot de passe</h2>
+  <h2 class="styleTitle" [innerText]="resource.change_password.title"></h2>
   <form
     class="flex flex-col space-y-7 w-11/12 md:w-8/12 justify-center mx-auto"
     [formGroup]="passwordForm"
@@ -7,52 +7,112 @@
   >
     <div class="form-group">
       <p-floatlabel variant="on">
+        <label class="z-1" [innerText]="resource.form.old_password"></label>
         <p-password
-          formControlName="password"
-          styleClass="w-full"
+          type="password"
+          formControlName="oldPassword"
           [inputStyleClass]="'w-full'"
+          [promptLabel]="resource.form.prompt_password"
+          class="w-full"
+          [styleClass]="'w-full'"
+          [toggleMask]="false"
           [feedback]="false"
-          [toggleMask]="true"
-          [ngClass]="{ 'ng-invalid ng-dirty': shouldShowPasswordError() }"
-        />
-        <label for="password">Nouveau Mot de passe</label>
+          autocomplete="current-password"
+          [ngClass]="{ 'p-invalid ng-dirty': shouldShowOldPasswordErrors() }"
+        >
+        </p-password>
       </p-floatlabel>
       <div
-        *ngIf="f.password.errors && (f.password.touched || f.password.dirty)"
-        class="text-red-600 text-sm mt-1"
+        *ngIf="f.oldPassword.errors && (f.oldPassword.touched || f.oldPassword.dirty)"
+        class="text-red-600 text-sm mt-1 text-center"
       >
-        <div *ngIf="f.password.errors.required">Le nouveau mot de passe est requis</div>
-        <div *ngIf="f.password.errors.minlength">
-          Le mot de passe doit avoir au moins 6 caractères
-        </div>
+        <div
+          *ngIf="f.oldPassword.errors.required"
+          [innerText]="resource.error.password_required"
+        ></div>
+        <div
+          *ngIf="f.oldPassword.errors.minlength"
+          [innerText]="resource.error.password_minlength"
+        ></div>
       </div>
     </div>
     <div class="form-group">
       <p-floatlabel variant="on">
+        <label class="z-1" [innerText]="resource.form.password"></label>
         <p-password
-          formControlName="confirmPassword"
-          styleClass="w-full"
+          type="password"
+          formControlName="password"
           [inputStyleClass]="'w-full'"
-          [feedback]="false"
+          [promptLabel]="resource.form.prompt_password"
+          class="w-full"
+          [styleClass]="'w-full'"
           [toggleMask]="true"
-          [ngClass]="{ 'ng-invalid ng-dirty': shouldShowConfirmPasswordError() }"
+          [weakLabel]="resource.error.weak_label"
+          [mediumLabel]="resource.error.medium_label"
+          [strongLabel]="resource.error.strong_label"
+          autocomplete="new-password"
+          [ngClass]="{ 'p-invalid ng-dirty': shouldShowPasswordErrors() }"
+        >
+          <ng-template #footer>
+            <p-divider />
+            <ul class="pl-2 my-0 leading-normal">
+              <li [innerText]="resource.signup.at_least_one_lowercase"></li>
+              <li [innerText]="resource.signup.at_least_one_uppercase"></li>
+              <li [innerText]="resource.signup.at_least_one_numeric"></li>
+              <li [innerText]="resource.signup.minimum_characters"></li>
+            </ul>
+          </ng-template>
+        </p-password>
+      </p-floatlabel>
+      <div
+        *ngIf="f.password.errors && (f.password.touched || f.password.dirty)"
+        class="text-red-600 text-sm mt-1 text-center"
+      >
+        <div
+          *ngIf="f.password.errors.required"
+          [innerText]="resource.error.password_required"
+        ></div>
+        <div
+          *ngIf="f.password.errors.minlength"
+          [innerText]="resource.error.password_minlength"
+        ></div>
+      </div>
+    </div>
+    <div class="form-group">
+      <p-floatlabel variant="on">
+        <label class="z-1" [innerText]="resource.form.confirm_password"></label>
+        <p-password
+          type="password"
+          formControlName="confirmPassword"
+          [inputStyleClass]="'w-full'"
+          class="w-full"
+          [styleClass]="'w-full'"
+          [toggleMask]="true"
+          [feedback]="false"
+          autocomplete="new-password"
+          [ngClass]="{ 'p-invalid ng-dirty': shouldShowConfirmPasswordErrors() }"
         />
-        <label for="confirmPassword">Confirmer Mot de passe</label>
       </p-floatlabel>
       <div
         *ngIf="f.confirmPassword.errors && (f.confirmPassword.touched || f.confirmPassword.dirty)"
-        class="text-red-600 text-sm mt-1"
+        class="text-red-600 text-sm mt-1 text-center"
       >
-        <div *ngIf="f.confirmPassword.errors.required">
-          La confirmation du nouveau mot de passe est requis
-        </div>
-        <div *ngIf="f.confirmPassword.errors.mustMatch">
-          Les mots de passe doivent être identique
-        </div>
+        <div
+          *ngIf="f.confirmPassword.errors.required"
+          [innerText]="resource.error.confirm_password_required"
+        ></div>
+        <div
+          *ngIf="f.confirmPassword.errors.mustMatch"
+          [innerText]="resource.error.password_mismatch"
+        ></div>
       </div>
     </div>
-    <p-button class="flex w-full justify-center" type="submit" [disabled]="passwordForm.invalid">
-      Mettre à jour
-    </p-button>
+    <button
+      pButton
+      class="flex w-full justify-center"
+      type="submit"
+      [disabled]="passwordForm.invalid"
+      [innerText]="resource.change_password.button"
+    ></button>
   </form>
 </div>
