--- a/src/app/views/section-portfolio/section-portfolio.component.html
+++ b/src/app/views/section-portfolio/section-portfolio.component.html
@@ -65,14 +65,14 @@
                 data-gallery="portfolioGallery"
                 [title]="product.title"
               >
-                <i class="bi bi-plus"></i>
+                <i class="pi pi-plus" style="font-size: 1rem"></i>
               </a>
               <a
                 [routerLink]="resource.portfolio.redirect_product_view | format: product.key"
                 class="text-blue-600 hover:text-blue-800"
                 [title]="resource.portfolio.details"
               >
-                <i class="bi bi-link"></i>
+                <i class="pi pi-link" style="font-size: 1rem"></i>
               </a>
             </div>
           </div>
