--- a/src/app/views/auth/signup/signup.component.html
+++ b/src/app/views/auth/signup/signup.component.html
@@ -6,13 +6,13 @@
 
 <section class="h-full py-18">
   <div class="flex justify-center">
-    <div class="w-1/2 formStyle space-y-6">
+    <div class="md:w-1/2 w-11/12 formStyle space-y-6">
       <div class="flex justify-center">
         <h2 class="styleTitle" [innerText]="this.resource.signup.title"></h2>
       </div>
       <form class="flex flex-col space-y-8" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
         <div class="space-y-2">
-          <p-floatlabel class="flex w-1/2 mx-auto">
+          <p-floatlabel class="flex md:w-8/10 w-full mx-auto">
             <label [innerText]="resource.form.display_name"></label>
             <input type="text" pInputText formControlName="displayName" class="w-full" />
           </p-floatlabel>
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="space-y-2">
-          <p-floatlabel class="flex w-1/2 mx-auto">
+          <p-floatlabel class="flex md:w-8/10 w-full mx-auto">
             <label [innerText]="resource.form.email"></label>
             <input type="text" pInputText formControlName="email" class="w-full" />
           </p-floatlabel>
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="space-y-2">
-          <p-floatlabel class="flex w-1/2 mx-auto">
+          <p-floatlabel class="flex md:w-8/10 w-full mx-auto">
             <label class="z-1" [innerText]="resource.form.password"></label>
             <p-password
               type="password"
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="space-y-2">
-          <p-floatlabel class="flex w-1/2 mx-auto">
+          <p-floatlabel class="flex md:w-8/10 w-full mx-auto">
             <label class="z-1" [innerText]="resource.form.confirm_password"></label>
             <p-password
               type="password"
